# apple-release-dates

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  netlify.toml  pyproject.toml
.forestry/: settings.yml
.forestry/front_matter/templates/: blog.yml
.github/: copilot-instructions.md
.github/workflows/: weekly-update.yml
content/: archives.md
content/iPad/: ipad-1st-generation.md  ipad-2.md
content/posts/: ipad-2.md
content/posts/68000/: Apple Lisa 2.md  Apple Lisa2.md  Apple Lisa_2_.md  Macintosh XL.md
content/posts/Accessories/: Apple Battery Charger.md
content/posts/AirPort/: AirPort (802_11b_ "Graphite").md  AirPort 80211b Graphite.md  AirPort Express (802_11g).md  AirPort Express 80211g.md  AirPort Express 80211n1st gen.md  AirPort Express 80211n2nd gen.md  AirPort Express 802_11n(1st gen).md  AirPort Express 802_11n(2nd gen).md  AirPort Extreme 80211ac.md  AirPort Extreme 80211n3rd gen.md  AirPort Extreme 80211n4th gen.md  AirPort Extreme 80211n5th gen.md  AirPort Extreme 802_11ac.md  AirPort Extreme 802_11n(3rd gen).md  AirPort Extreme 802_11n(4th gen).md  AirPort Extreme 802_11n(5th gen).md  AirPort Extreme(1st generation)_4__5__6_.md  AirPort Extreme1st generation456.md  AirPort Time Capsule80211ac.md  AirPort Time Capsule802_11ac.md  (+12 more)
data/: apple_products.csv  apple_products.json
generator/: Pipfile  generate_blogposts.ipynb
generator/.ipynb_checkpoints/: generate_blogposts-checkpoint.ipynb
scripts/: dump_apple.py  generate_pages.py  helpers.py  uv_lock_to_requirements.py
src/apple_release_dates/: __init__.py  dump.py
(+1335 files in other folders)
